--- a/gpu_dev/src/configVars.mk.in
+++ b/gpu_dev/src/configVars.mk.in
@@ -193,9 +193,7 @@ HAVE_MPI := @HAVE_MPI@
 
 HAVE_CUDA        := @HAVE_CUDA@
 CUDA_INCLUDE     := @INC_CUDA_H@
-CUDA_SDK_INCLUDE := @INC_CUDA_SDK_H@
 CUDA_LIBRARY     := @CUDA_LIB_DIR_FLAG@ @CUDA_LIB_FLAG@
-CUDA_SDK_LIBRARY := @CUDA_SDK_LIB_DIR_FLAG@ @CUDA_SDK_LIB_FLAG@
 
 MDSPLUS_LIBRARY := @MDSPLUS_LIB_DIR_FLAG@ @MDSPLUS_LIB_FLAG@
 MDSPLUS_INCLUDE := @INC_MDSPLUS_H@
@@ -261,7 +259,7 @@ PETSC_UNI_LIBRARY := @PETSC_UNI_LIB_DIR_FLAG@ @PETSC_UNI_LIB_FLAG@ @MPI_UNI_LIB_
 
 ELECTRIC_FENCE := @ELECTRIC_FENCE_LIB_DIR_FLAG@ @ELECTRIC_FENCE_LIB_FLAG@
 
-INCLUDES += -I$(SRCTOP)/include -I$(SRCTOP) -I$(OBJTOP) -I$(OBJTOP)/include @INC_XML2_H@ @INC_PETSC_H@ $(MPI_INCLUDE) @INC_MPI_UNI_H@ @INC_PETSC_UNI_H@ @INC_Z_H@ @INC_HYPRE_H@ $(TAUINC) @INC_PNG_H@ $(ZOLTAN_INCLUDE) $(TABPROPS_INCLUDE) ${MALLOC_TRACE_INCLUDE}
+INCLUDES += -I$(SRCTOP)/include -I$(SRCTOP) -I$(OBJTOP) -I$(OBJTOP)/include @INC_XML2_H@ @INC_PETSC_H@ $(MPI_INCLUDE) $(CUDA_INCLUDE) @INC_MPI_UNI_H@ @INC_PETSC_UNI_H@ @INC_Z_H@ @INC_HYPRE_H@ $(TAUINC) @INC_PNG_H@ $(ZOLTAN_INCLUDE) $(TABPROPS_INCLUDE) ${MALLOC_TRACE_INCLUDE}
 FINCLUDES += -I$(SRCTOP) -I$(OBJTOP) -I$(OBJTOP)/include
 
 BUILD_ICE=@BUILD_ICE@
@@ -284,7 +282,7 @@ CORE_STATIC_PSELIBS := \
     Core_Malloc Core_IO Core_OS                             
 CORE_STATIC_LIBS := \
     $(TEEM_LIBRARY) $(XML2_LIBRARY) $(Z_LIBRARY) $(F_LIBRARY) $(PETSC_LIBRARY) $(HYPRE_LIBRARY) \
-    $(BLAS_LIBRARY) $(LAPACK_LIBRARY) $(MPI_LIBRARY) $(THREAD_LIBRARY) $(X_LIBRARY) $(M_LIBRARY) $(DL_LIBRARY)
+    $(BLAS_LIBRARY) $(LAPACK_LIBRARY) $(MPI_LIBRARY) $(CUDA_LIBRARY) $(THREAD_LIBRARY) $(X_LIBRARY) $(M_LIBRARY) $(DL_LIBRARY)
 
 # variables and suffix rules for module transformation
 #------------------------------------------------------------------------------
@@ -339,7 +337,7 @@ else
   SONAMEFLAG = 
 endif
 
-.SUFFIXES: .cc .c .$(OBJEXT) .s .F .f .cpp .cxx
+.SUFFIXES: .cc .c .$(OBJEXT) .s .F .f .cpp .cxx .cu
 
 .cc.$(OBJEXT): $<
 ifeq ($(SCI_MAKE_BE_QUIET),true)
