--- a/src/configVars.mk.in
+++ b/src/configVars.mk.in
@@ -172,6 +172,7 @@ HAVE_LAPACKMP  := @HAVE_LAPACKMP@
 LAPACK_LIBRARY := @LAPACK_LIB_DIR_FLAG@ @LAPACK_LIB_FLAG@
 LAPACKMP_LIBRARY := @LAPACKMP_LIB_DIR_FLAG@ @LAPACKMP_LIB_FLAG@
 
+
 ifneq ($(TAU_MAKEFILE),)
   TAU_LIB_DIR       := $(TAU_PREFIX_INSTALL_DIR)/$(CONFIG_ARCH)/lib
   TAU_LIB_FLAG      := $(TAU_MPI_LIBS) $(TAU_SHLIBS)
@@ -182,6 +183,9 @@ ifneq ($(TAU_MAKEFILE),)
 else
   TAU_LIBRARY :=
 endif
+
+PAPI_INCLUDE     := @INC_PAPI_H@
+PAPI_LIBRARY     := @PAPI_LIB_DIR_FLAG@ @PAPI_LIB_FLAG@
 
 # Always put $(TAU_LIBRARY) in front of $(MPI_LIBRARY) for the TAU_MPI wrapper
 
@@ -255,7 +259,7 @@ PETSC_UNI_LIBRARY := @PETSC_UNI_LIB_DIR_FLAG@ @PETSC_UNI_LIB_FLAG@ @MPI_UNI_LIB_
 
 ELECTRIC_FENCE := @ELECTRIC_FENCE_LIB_DIR_FLAG@ @ELECTRIC_FENCE_LIB_FLAG@
 
-INCLUDES += -I$(SRCTOP)/include -I$(SRCTOP) -I$(OBJTOP) -I$(OBJTOP)/include @INC_XML2_H@ @INC_PETSC_H@ $(MPI_INCLUDE) @INC_MPI_UNI_H@ @INC_PETSC_UNI_H@ @INC_Z_H@ @INC_HYPRE_H@ $(TAUINC) @INC_PNG_H@ $(ZOLTAN_INCLUDE) $(TABPROPS_INCLUDE) ${MALLOC_TRACE_INCLUDE}
+INCLUDES += -I$(SRCTOP)/include -I$(SRCTOP) -I$(OBJTOP) -I$(OBJTOP)/include @INC_XML2_H@ @INC_PETSC_H@ $(MPI_INCLUDE) $(PAPI_INCLUDE) @INC_MPI_UNI_H@ @INC_PETSC_UNI_H@ @INC_Z_H@ @INC_HYPRE_H@ $(TAUINC) @INC_PNG_H@ $(ZOLTAN_INCLUDE) $(TABPROPS_INCLUDE) ${MALLOC_TRACE_INCLUDE}
 FINCLUDES += -I$(SRCTOP) -I$(OBJTOP) -I$(OBJTOP)/include
 
 BUILD_ICE=@BUILD_ICE@
