--- a/src/configVars.mk.in
+++ b/src/configVars.mk.in
@@ -294,13 +294,17 @@ AS              := @AS@
 LD              := @LD@
 CFLAGS          := @CFLAGS@ $(CFLAGS) @WOFF_STRING@
 CXXFLAGS        := @CXXFLAGS@ $(CXXFLAGS) @WOFF_STRING@
+NVCC_CFLAGS     := @NVCC_CFLAGS@
+NVCC_CXXFLAGS   := @NVCC_CXXFLAGS@
 ifeq ($(IS_WIN),yes)
   SOFLAGS         := $(CFLAGS) @SOFLAGS@ -LIBPATH:$(LIBDIR)
   LDFLAGS         := $(CXXFLAGS) @LDFLAGS@
+  NVCC_LDFLAGS    := $(NVCC_CXXFLAGS) @NVCC_LDFLAGS@
   PROGRAM_LDFLAGS := -link -LIBPATH:$(LIBDIR)
 else
   SOFLAGS         := $(CFLAGS) @SOFLAGS@ -L$(LIBDIR)
   LDFLAGS         := $(CXXFLAGS) @LDFLAGS@ -L$(LIBDIR) $(ELECTRIC_FENCE)
+  NVCC_LDFLAGS    := $(NVCC_CXXFLAGS) @NVCC_LDFLAGS@
 endif
 ASFLAGS         := @ASFLAGS@  $(ASFLAGS)
 F77		:= @F77@
@@ -457,51 +461,51 @@ ifeq ($(CC_DEPEND_MODE),normal)
 	-echo "Building $*.$(OBJEXT) ..." ; \
 	pdbfile=`basename $< .cu`.pdb ; \
 	rm $$pdbfile ; \
-	$(PDTPARSE) $< $(TAU_INCLUDE) $(TAU_MPI_INCLUDE) $(CXXFLAGS) $(INCLUDES) $(CC_DEPEND_REGEN) $(call repository,$@) -DSCI_Hash_Map_h -DSCI_HASH_SET_H -DPDT_PARSER; \
+	$(PDTPARSE) $< $(TAU_INCLUDE) $(TAU_MPI_INCLUDE) $(NVCC_CXXFLAGS) $(INCLUDES) -Xcompiler $(CC_DEPEND_REGEN) $(call repository,$@) -DSCI_Hash_Map_h -DSCI_HASH_SET_H -DPDT_PARSER; \
 	rm $*.inst.cu ; \
 	$(TAUINSTR) $$pdbfile $< -o $*.inst.cu -f $(SRCTOP)/tau/select.dat ; \
-        $(NVCC) $(CXXFLAGS) $(INCLUDES) $(CC_DEPEND_REGEN) $(call repository,$@) -c -I`dirname $<` $*.inst.cu -o $@
+        $(NVCC) $(NVCC_CXXFLAGS) $(INCLUDES) -Xcompiler  $(CC_DEPEND_REGEN) $(call repository,$@) -c -I`dirname $<` $*.inst.cu -o $@
 	@if [ -f $@ ] ; then  \
 	echo " *** Instrumented $*.$(OBJEXT) successfully  " ; \
 	else \
 	echo " *** Failed to instrumented $*.$(OBJEXT)  " ; \
-	$(NVCC) $(CXXFLAGS) $(INCLUDES) $(CC_DEPEND_REGEN) $(call repository,$@) -c $< -o $@ ; \
+	$(NVCC) $(NVCC_CXXFLAGS) $(INCLUDES) -Xcompiler  $(CC_DEPEND_REGEN) $(call repository,$@) -c $< -o $@ ; \
 	ls -l $@; \
 	fi ; \
 	rm -f $$pdbfile ; 
     else
       ifeq ($(SCI_MAKE_BE_QUIET),true)
 	@echo "Compiling: $<"
-	@$(NVCC) $(CXXFLAGS) $(INCLUDES) $(CC_DEPEND_REGEN) $(call repository,$@) -c $< -o $@ ; 
+	@$(NVCC) $(NVCC_CXXFLAGS) $(INCLUDES) -Xcompiler  $(CC_DEPEND_REGEN) $(call repository,$@) -c $< -o $@ ;
       else
-	$(NVCC) $(CXXFLAGS) $(INCLUDES) $(CC_DEPEND_REGEN) $(call repository,$@) -c $< -o $@ ; 
+	$(NVCC) $(NVCC_CXXFLAGS) $(INCLUDES) -Xcompiler  $(CC_DEPEND_REGEN) $(call repository,$@) -c $< -o $@ ;
       endif
     endif
   else
     ifeq ($(SCI_MAKE_BE_QUIET),true)
 	@echo "Compiling: $<"
-	@$(NVCC) $(CXXFLAGS) $(INCLUDES) $(CC_DEPEND_REGEN) @WIN_DLLFLAGS@ $(call repository,$@) -c $< -o $@
+	@$(NVCC) $(NVCC_CXXFLAGS) $(INCLUDES) -Xcompiler $(CC_DEPEND_REGEN) @WIN_DLLFLAGS@ $(call repository,$@) -c $< -o $@
     else
-	$(NVCC) $(CXXFLAGS) $(INCLUDES) $(CC_DEPEND_REGEN) @WIN_DLLFLAGS@ $(call repository,$@) -c $< -o $@
+	$(NVCC) $(NVCC_CXXFLAGS) $(INCLUDES) -Xcompiler $(CC_DEPEND_REGEN) @WIN_DLLFLAGS@ $(call repository,$@) -c $< -o $@
     endif
   endif
 else
   ifeq ($(CC_DEPEND_MODE),modify)
     ifeq ($(SCI_MAKE_BE_QUIET),true)
 	@echo "Compiling: $<"
-	@$(NVCC) $(CXXFLAGS) $(INCLUDES) $(CC_DEPEND_REGEN) $(call repository,$@) -c $< -o $@ && $(SED) -e 's,^$(notdir $@),$@,' $(basename $@).$(CC_DEPEND_EXT) > $(basename $@).$(CC_DEPEND_EXT).tmp && mv -f $(basename $@).$(CC_DEPEND_EXT).tmp $(basename $@).$(CC_DEPEND_EXT)
+	@$(NVCC) $(NVCC_CXXFLAGS) $(INCLUDES) -Xcompiler $(CC_DEPEND_REGEN) $(call repository,$@) -c $< -o $@ && $(SED) -e 's,^$(notdir $@),$@,' $(basename $@).$(CC_DEPEND_EXT) > $(basename $@).$(CC_DEPEND_EXT).tmp && mv -f $(basename $@).$(CC_DEPEND_EXT).tmp $(basename $@).$(CC_DEPEND_EXT)
     else
-	$(NVCC) $(CXXFLAGS) $(INCLUDES) $(CC_DEPEND_REGEN) $(call repository,$@) -c $< -o $@ && $(SED) -e 's,^$(notdir $@),$@,' $(basename $@).$(CC_DEPEND_EXT) > $(basename $@).$(CC_DEPEND_EXT).tmp && mv -f $(basename $@).$(CC_DEPEND_EXT).tmp $(basename $@).$(CC_DEPEND_EXT)
+	$(NVCC) $(NVCC_CXXFLAGS) $(INCLUDES) -Xcompiler $(CC_DEPEND_REGEN) $(call repository,$@) -c $< -o $@ && $(SED) -e 's,^$(notdir $@),$@,' $(basename $@).$(CC_DEPEND_EXT) > $(basename $@).$(CC_DEPEND_EXT).tmp && mv -f $(basename $@).$(CC_DEPEND_EXT).tmp $(basename $@).$(CC_DEPEND_EXT)
     endif
   else
     ifeq ($(CC_DEPEND_MODE),move)
       ifeq ($(SCI_MAKE_BE_QUIET),true)
 	@echo "Compiling: $<"
-	@$(NVCC) $(CXXFLAGS) $(INCLUDES) $(CC_DEPEND_REGEN) $(call repository,$@) -c $< -o $@
+	@$(NVCC) $(NVCC_CXXFLAGS) $(INCLUDES) -Xcompiler $(CC_DEPEND_REGEN) $(call repository,$@) -c $< -o $@
 	@sed 's,^$(basename $@),$@,g' $(basename $(notdir $@)).$(CC_DEPEND_EXT) > $(basename $@).$(CC_DEPEND_EXT)
 	@rm $(basename $(notdir $@)).$(CC_DEPEND_EXT)
       else
-	$(NVCC) $(CXXFLAGS) $(INCLUDES) $(CC_DEPEND_REGEN) $(call repository,$@) -c $< -o $@
+	$(NVCC) $(NVCC_CXXFLAGS) $(INCLUDES) -Xcompiler $(CC_DEPEND_REGEN) $(call repository,$@) -c $< -o $@
 	sed 's,^$(basename $@),$@,g' $(basename $(notdir $@)).$(CC_DEPEND_EXT) > $(basename $@).$(CC_DEPEND_EXT)
 	rm $(basename $(notdir $@)).$(CC_DEPEND_EXT)
       endif
@@ -509,11 +513,11 @@ else
       ifeq ($(CC_DEPEND_MODE),modify_and_move)
         ifeq ($(SCI_MAKE_BE_QUIET),true)
 	  @echo "Compiling: $<"
-	  @$(NVCC) $(CXXFLAGS) $(INCLUDES) $(CC_DEPEND_REGEN) $(call repository,$@) -c $< -o $@ && \
+	  @$(NVCC) $(NVCC_CXXFLAGS) $(INCLUDES) -Xcompiler $(CC_DEPEND_REGEN) $(call repository,$@) -c $< -o $@ && \
              $(SED) -e 's,^$(notdir $@),$@,' $(basename $(notdir $@)).$(CC_DEPEND_EXT) > $(basename $@).$(CC_DEPEND_EXT)
 	  @rm $(basename $(notdir $@)).$(CC_DEPEND_EXT)
         else
-	  $(NVCC) $(CXXFLAGS) $(INCLUDES) $(CC_DEPEND_REGEN) $(call repository,$@) -c $< -o $@ && \
+	  $(NVCC) $(NVCC_CXXFLAGS) $(INCLUDES) -Xcompiler $(CC_DEPEND_REGEN) $(call repository,$@) -c $< -o $@ && \
              $(SED) -e 's,^$(notdir $@),$@,' $(basename $(notdir $@)).$(CC_DEPEND_EXT) > $(basename $@).$(CC_DEPEND_EXT)
 	  rm $(basename $(notdir $@)).$(CC_DEPEND_EXT)
         endif
@@ -529,18 +533,18 @@ else
           ifeq ($(SCI_MAKE_BE_QUIET),true)
 	    @echo "Compiling: $<"
 	    @rm -f $(basename $@).$(CC_DEPEND_EXT)
-	    @$(NVCC) $(CXXFLAGS) $(INCLUDES) $(CC_DEPEND_REGEN) -c $< | sed 's,^$(notdir $@),$@,g' > $(basename $@).$(CC_DEPEND_EXT)
+	    @$(NVCC) $(NVCC_CXXFLAGS) $(INCLUDES) -Xcompiler $(CC_DEPEND_REGEN) -c $< | sed 's,^$(notdir $@),$@,g' > $(basename $@).$(CC_DEPEND_EXT)
 
             # Now do the actual compile!
-	    @$(NVCC) $(CXXFLAGS) $(INCLUDES) $(call repository,$@) -c $< -o $@
+	    @$(NVCC) $(NVCC_CXXFLAGS) $(INCLUDES) -Xcompiler $(call repository,$@) -c $< -o $@
           else
 	    @echo "CREATING DEPENDENCY INFORMATION:"
 	    @rm -f $(basename $@).$(CC_DEPEND_EXT)
-	    $(NVCC) $(CXXFLAGS) $(INCLUDES) $(CC_DEPEND_REGEN) -c $< | sed 's,^$(notdir $@),$@,g' > $(basename $@).$(CC_DEPEND_EXT)
+	    $(NVCC) $(NVCC_CXXFLAGS) $(INCLUDES) -Xcompiler $(CC_DEPEND_REGEN) -c $< | sed 's,^$(notdir $@),$@,g' > $(basename $@).$(CC_DEPEND_EXT)
 
             # Now do the actual compile!
 	    @echo "ACTUALLY COMPILING:"
-	    $(NVCC) $(CXXFLAGS) $(INCLUDES) $(call repository,$@) -c $< -o $@
+	    $(NVCC) $(NVCC_CXXFLAGS) $(INCLUDES) -Xcompiler $(call repository,$@) -c $< -o $@
           endif
         else
 	  @echo ".cu rule: Unknown CC_DEPEND_MODE: $(CC_DEPEND_MODE)"
@@ -550,6 +554,7 @@ else
     endif
   endif
 endif
+
 .cpp.$(OBJEXT): $<
 	-rm -f $@
 ifeq ($(CC_DEPEND_MODE),normal)
