--- a/src/configure.ac
+++ b/src/configure.ac
@@ -4030,7 +4030,7 @@ else
    #   Also, libHYPRE has some C++ stuff in it, so we need to be in C++ mode...
    AC_LANG([C++])
    SCI_TRY_LINK(HYPRE,HYPRE libraries and headers,HYPRE.h,$_sci_inc,
-                            HYPRE,
+                            HYPRE HYPRE_utilities HYPRE_krylov HYPRE_struct_mv HYPRE_struct_ls HYPRE_sstruct_mv HYPRE_sstruct_ls HYPRE_parcsr_mv HYPRE_parcsr_ls,
                             $_sci_lib,
                             $MPI_LIB_DIR_FLAG $MPI_LIB_FLAG $MALLOC_TRACE_LIB_DIR_FLAG $MALLOC_TRACE_LIB_FLAG $BLAS_LIB_DIR_FLAG $BLAS_LIB_FLAG $F_LIB_DIR_FLAG $F_LIB_FLAG $M_LIB_FLAG $DL_LIB_FLAG $THREAD_LIB_FLAG,
                             ,
